--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,10 @@
 # Smart Meal Planner Configuration
 # Copy this file to .env and update the values as needed
 
-# Database Configuration (for future features)
-# DATABASE_URL=sqlite:///mealplanner.db
+# Database Configuration
+DATABASE_URL=sqlite:///mealplanner.db
+# Alternative PostgreSQL configuration:
+# DATABASE_URL=postgresql://username:password@localhost:5432/mealplanner
 
 # Email Configuration (for future features)
 # SMTP_HOST=smtp.gmail.com
